refactor: rename model classes suffixed by Infos with Model suffix
Signed-off-by: Joris Mancini <joris.mancini_externe@rte-france.com>